--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "devDependencies": {
     "browser-sync": "^2.23.6",
     "gulp": "^3.9.1",
-    "gulp-sass": "^4.0.0"
+    "gulp-sass": "^4.0.0",
+    "sitemap-generator-cli": "^7.2.0"
   }
 }
